--- a/.github/workflows/cache-envato-redux-catalog.yml
+++ b/.github/workflows/cache-envato-redux-catalog.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: Get current date
         id: date
-        run: echo " ::set-output name=date::$(date +'%Y-%m-%d')"
+        run: echo " {name}={date::$(date +'%Y-%m-%d')}" >> $GITHUB_OUTPUT
       - uses: actions/checkout@v1
       - uses: nanasess/setup-php@master
         with:
