--- a/.github/workflows/cache-envato-redux-catalog.yml
+++ b/.github/workflows/cache-envato-redux-catalog.yml
@@ -8,8 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get current date
-        id: date
-        run: echo " {name}={date::$(date +'%Y-%m-%d')}" >> $GITHUB_OUTPUT
+        id: version
+        run: |
+          echo "builddate=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
       - uses: actions/checkout@v1
       - uses: nanasess/setup-php@master
         with:
@@ -21,7 +22,7 @@ jobs:
 
       - run: git config --global user.email "support@svlstudios.com" && git config --global user.name "SVL Studios"
       - run: git add -f -A
-      - run: git commit -m "Envato Redux Catalog Update: ${{ steps.date.outputs.date }} (Build $GITHUB_RUN_NUMBER)" || echo "Nothing to commit."
+      - run: git commit -m "Envato Redux Catalog Update: ${{ steps.version.outputs.builddate }} (Build $GITHUB_RUN_NUMBER)" || echo "Nothing to commit."
       - run: git push "https://x-access-token:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY" HEAD:main
       
         env:
